--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
 	
 	<meta charset="utf-8">
-	<title>Большая Стирка прачечная</title>
+	<title>БОЛЬШАЯ СТИРКА прачечная</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="description" content="">
 	<meta name="author" content="">
@@ -131,20 +131,21 @@
 				<ul class="slides">
 					<li class="slide1">
 						<div class="flex_caption1">
-							<p class="title1 captionDelay2 FromTop">Creative</p>
-							<p class="title2 captionDelay4 FromTop">White</p>
-							<p class="title3 captionDelay6 FromTop">Templates</p>
-							<p class="title4 captionDelay7 FromBottom">The template is suitable for any company and the direction that appreciates style, purity and quality of the web site.</p>
+							<p class="title1 captionDelay2 FromTop">Клининговая компания</p>
+							<br/>
+							<p class="title2 captionDelay4 FromTop">Большая</p>
+							<p class="title3 captionDelay6 FromTop">Стирка</p>
+							<p class="title4 captionDelay7 FromBottom">Доверте нам всю грязную работу &#128521;</p>
 						</div>
-						<a class="slide_btn FromRight" href="javascript:void(0);" >Read More</a>
-					<li class="slide2">
+						<a class="slide_btn FromRight" href="#contacts" >Связаться с нами</a>
+					<!--<li class="slide2">
 						<div class="flex_caption1">
 							<p class="title1 captionDelay6 FromLeft">Responsive</p>
 							<p class="title2 captionDelay4 FromLeft">Design</p>
 							<p class="title3 captionDelay2 FromLeft">Theme</p>
 							<p class="title4 captionDelay7 FromLeft">The template is suitable for any company and the direction that appreciates style, purity and quality of the web site.</p>
 						</div>
-						<a class="slide_btn FromRight" href="javascript:void(0);" >Read More</a>
+						<a class="slide_btn FromRight" href="#contacts" >Связаться с нами</a>
 					</li>
 					<li class="slide3">
 						<div class="flex_caption1">
@@ -152,9 +153,9 @@
 							<p class="title2 captionDelay2 FromBottom">Video</p>
 							<p class="title3 captionDelay3 FromBottom">Background</p>
 							<p class="title4 captionDelay5 FromBottom">The template is suitable for any company and the direction that appreciates style, purity and quality of the web site.</p>
-						</div>
-						<a class="slide_btn FromRight" href="javascript:void(0);" >Read More</a>
-						
+						</div> 
+						<a class="slide_btn FromRight" href="#contacts" >Связаться с нами</a>
+						-->
 						<!-- VIDEO BACKGROUND 
 						<a id="P2" class="player" data-property="{videoURL:'tDvBwPzJ7dY',containment:'.top_slider .slide3',autoPlay:true, mute:true, startAt:0, opacity:1}" ></a>
 						<!-- //VIDEO BACKGROUND -->
